# cyfs-gateway

.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
doc/optimize-build-timing/: cyfs_gateway_build_hotspots_and_optimization.md  cyfs_gateway_build_optimization_followups.md
src/: Cargo.toml  bucky_project.yaml
src/components/cyfs-acme/: Cargo.toml
src/components/cyfs-acme/src/: account_key.rs  acme_client.rs  cert_mgr.rs  lib.rs
src/components/cyfs-sn/src/: sn_server.rs  sqlite_db.rs
src/components/cyfs-socks/: Cargo.toml
