[workspace]
resolver = "3"
members = [
    "components/cyfs-process-chain",
    "components/cyfs-process-chain-lint",
    "components/cyfs-dns",
    "components/cyfs-socks",
    "components/cyfs-lookup",
    "components/cyfs-gateway-lib",
    "components/cyfs-sn",
    "components/cyfs-tun",
    "components/cyfs-acme",
    "components/server-runner",
    "apps/cyfs_gateway",
    "apps/test_server",
]

[workspace.package]
version = "0.6.0"

[workspace.dependencies]
# 基础异步运行时
tokio = { version = "1.49.0", features = ["full"] }
# 日志
log = "0.4.29"
env_logger = "0.11.8"
# 序列化
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
serde_qs = "0.15"
serde_urlencoded = "0.7.1"
# 异步 trait
async-trait = "0.1.89"
# 错误处理
anyhow = "1.0.100"
thiserror = "2.0.18"
# URL 处理
url = { version = "2.5.8", features = ["serde"] }
# 工具库
lazy_static = "1.5.0"
once_cell = "1.21.3"
rand = "0.9.2"
hex = "0.4.3"
base64 = "0.22.1"
# HTTP 相关
http = "1.4.0"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["full"] }
http-body-util = "0.1.3"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls-native-roots"] }
# 未来和流
futures = "0.3.31"
futures-util = "0.3.31"
# 命令行
clap = "4.5.54"
# 时间
chrono = { version = "0.4.39", features = ["serde"] }
# 加密
sha2 = "0.10.9"
rsa = { version = "0.9", default-features = false, features = ["std", "sha2", "pem"] }
rand08 = { package = "rand", version = "0.8" }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
# TLS
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = "0.26.1"
rustls-pemfile = "2.0"
rustls-platform-verifier = "0.6.1"
ring = "0.17"
# 证书生成
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
x509-parser = "0.18.1"
# 其他工具
toml = "0.8.23"
regex = "1.12.2"
shlex = "1.3.0"
bytes = "1.11.0"
tempfile = "3.22.0"
# BuckyOS 基础库
buckyos-kit = { git = "https://github.com/buckyos/buckyos-base.git", branch = "main", package = "buckyos-kit" }
kRPC = { git = "https://github.com/buckyos/buckyos-base.git", branch = "main", package = "kRPC" }
name-client = { git = "https://github.com/buckyos/buckyos-base.git", branch = "main", package = "name-client" }
name-lib = { git = "https://github.com/buckyos/buckyos-base.git", branch = "main", package = "name-lib" }

[patch.crates-io]
sfo-js = { path = "../vendor/sfo-js-no-fetch" }

[patch."https://github.com/buckyos/cyfs-ndn.git"]
fs-buffer = { path = "../vendor/cyfs-ndn-rustls/src/fs_buffer" }
named_store = { path = "../vendor/cyfs-ndn-rustls/src/named_store" }
ndm = { path = "../vendor/cyfs-ndn-rustls/src/ndm" }
ndm-lib = { path = "../vendor/cyfs-ndn-rustls/src/ndm-lib" }
ndn-lib = { path = "../vendor/cyfs-ndn-rustls/src/ndn-lib" }

[profile.test]
debug = 0
split-debuginfo = "off"
