[package]
name = "cyfs-acme"
version.workspace = true
edition = "2024"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde.workspace = true
rcgen.workspace = true
base64.workspace = true
anyhow.workspace = true
sha2.workspace = true
rsa.workspace = true
rand08.workspace = true
log.workspace = true
serde_json.workspace = true
async-trait.workspace = true
hex.workspace = true
buckyos-kit.workspace = true
rand.workspace = true
chrono.workspace = true
rustls-pemfile.workspace = true
x509-parser.workspace = true
lazy_static.workspace = true
sfo-js = "*"
callback-trait = "0.1"
