[package]
name = "cyfs-socks"
version.workspace = true
edition = "2021"
authors = ["BuckyOS DAO","@lurenpluto"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
boa_engine = "0.21.0"
boa_runtime = "0.21.0"
url.workspace = true
thiserror.workspace = true
async-trait.workspace = true
reqwest.workspace = true
log.workspace = true
trust-dns-resolver = "*"
futures-util.workspace = true
regex.workspace = true

serde_json.workspace = true
serde.workspace = true
fast-socks5 = "*"
once_cell.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["string"] }

buckyos-kit.workspace = true
cyfs-process-chain = { path = "../cyfs-process-chain" }
cyfs-gateway-lib = { path = "../cyfs-gateway-lib" }
